Make changes to support java 8 compatibility